--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -293,10 +293,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <label>Ghi chú</label>
                                 <textarea class="form-control" rows="3" id = "note1"></textarea>
                             </div>
+                            <div id="error-log"></div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                            <button type="button" class="btn btn-primary">Lưu thông tin</button>
+                            <button type="button" class="btn btn-secondary"  data-dismiss="modal" onclick="window.location = '/tran-a-day'">Đóng</button>
+                            <button type="button" class="btn btn-primary" id = "saveTran">Lưu thông tin</button>
                         </div>
                     </div>
                 </div>
