--- a/src/main/resources/templates/transaction/detail.html
+++ b/src/main/resources/templates/transaction/detail.html
@@ -1,11 +1,11 @@
 <script type="text/javascript" th:inline="javascript">
     $(function () {
         const pagination = new Pagination();
-        var date = window.localStorage.getItem("date")
-        $("#head-title").html("Bảng thu chi trong ngày " + date)
+        var current_date = window.localStorage.getItem("date")
+        $("#head-title").html("Bảng thu chi trong ngày " + current_date)
 
         getListProcedure();
-        getListCustomer();
+        // getListCustomer();
 
         function getListCustomer() {
             console.log("getListCustomer")
@@ -95,16 +95,17 @@
         }
 
         function createTransaction() {
-            var cusName =('#name').val();
-            var proce;
-            var diagnostic;
-            var diagMoney;
-            var medicine;
-            var medicineMoney;
-            var prepaid;
-            var debt;
-            var note;
-            // var date = date;
+            var cusName = $('#cusName').val().trim();
+            var proce = $('#kt_select2_3_modal').val();
+            var diagnostic = $('#diagnostic').val().trim();
+            var proceMoney = $('#moneyPro').val().trim();
+            var medicine = $('#medicine').val().trim();
+            var medicineMoney= $('#moneyMec').val().trim();
+            var pay = $('#pay').val().trim();
+            var prepaid= pay.includes("/")?pay:'';
+            var debt= pay.includes("N")?pay:'';
+            var note= $('#note1').val().trim();
+            var date = current_date;
         }
     });
 </script>
