--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -85,6 +85,9 @@ License: You must have a valid license purchased only from themeforest(the above
             top: 50%;
             transform: translateY(-50%);
         }
+        .twitter-typeahead{
+            display: block !important;
+        }
     </style>
 </head>
 
@@ -141,8 +144,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     class="text-left" rowspan="2">STT
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" rowspan="2">Họ
-                                                    và tên
+                                                    class="text-center" rowspan="2">Họ và tên
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
                                                     class="text-center" rowspan="2">Chẩn
@@ -250,20 +252,15 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row">
                                 <div class="col-lg-6">
                                     <label>Tên bệnh nhân</label>
-                                    <input type="text" list="lst_name" class="form-control material-input"
-                                           placeholder="Nhập họ và tên bệnh nhân" id="name">
-                                    <datalist id="lst_name">
-                                        <!-- <option value="Edge">
-                                        <option value="Firefox">
-                                        <option value="Chrome">
-                                        <option value="Opera">
-                                        <option value="Safari"> -->
-                                    </datalist>
+                                    <div class="typeahead">
+                                    <input type="text" class="form-control" dir="ltr"
+                                           placeholder="Nhập họ và tên bệnh nhân" id="cusName">
+                                    </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <label>Chẩn đoán</label>
                                     <input type="text" class="form-control material-input" placeholder="Chẩn đoán"
-                                           id="exam">
+                                           id="diagnostic">
                                 </div>
                             </div>
                             <div class="row">
@@ -294,7 +291,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
                             <div class="row col-lg-12">
                                 <label>Ghi chú</label>
-                                <textarea class="form-control" rows="3"></textarea>
+                                <textarea class="form-control" rows="3" id = "note1"></textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -406,6 +403,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <script src="assets/js/pages/crud/datatables/basic/paginations.js" type="text/javascript"></script>
 <script src="assets/js/common.js" type="text/javascript"></script>
+<script src="assets/js/custom_autocomplete.js" type="text/javascript"></script>
 
 <!--end::Page Scripts -->
 </body>
