--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -216,7 +216,6 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     class="text-center">Ghi chú
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle; width: 10%;"
-
                                                     class="text-center">
                                                     <button type="button" class="btn btn-warning  btn-circle btn-icon" data-toggle="modal"
                                                             data-target="#kt_modal_3" data-backdrop="static" 
@@ -337,8 +336,8 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-                            <button type="button" class="btn btn-primary">Lưu thông tin</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="window.location = '/tran-a-day'">Đóng</button>
+                            <button type="button" class="btn btn-primary" id="saveSpend">Lưu thông tin</button>
                         </div>
                     </div>
                 </div>
