--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -86,7 +86,8 @@ License: You must have a valid license purchased only from themeforest(the above
                                     Danh sách bệnh nhân
                                 </h3>
                             </div>
-                            <div class="row kt-portlet__head--right vertical-center" style="width:70%; justify-content: right">
+                            <div class="row kt-portlet__head--right vertical-center"
+                                 style="width:70%; justify-content: right">
                                 <input type="text" class="form-control material-input col-lg-6"
                                        placeholder="Tìm kiếm theo tên" id="name">
                                 <select class="form-control kt-select2 col-lg-2" id="cb_payment" name="cb_payment">
@@ -99,7 +100,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
                         </div>
-                        <div class="kt-portlet__body "  style="font-size: x-small;">
+                        <div class="kt-portlet__body " style="font-size: x-small;">
                             <div class="kt-section ">
                                 <div class="kt-section__content">
                                     <div class="table-responsive">
@@ -110,18 +111,18 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     class="text-left">STT
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;width: 40%"
-                                                    class="text-center">Họ
-                                                    và tên
+                                                    class="text-center">Họ và tên
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;width: 20%"
                                                     class="text-center">Hình thức thanh toán
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;width: 25%"
-                                                    class="text-center">Ghi
-                                                    chú
+                                                    class="text-center">Ghi chú
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;width: 10%">
-                                                    <button type="button" class="btn btn-success btn-circle btn-icon"><i class="flaticon2-plus"></i>
+                                                    <button type="button" class="btn btn-success  btn-circle btn-icon" data-toggle="modal"
+                                                            data-target="#kt_modal_3" data-backdrop="static"
+                                                            data-keyboard="false"><i class="flaticon2-plus"></i>
                                                     </button>
                                                 </th>
                                             </tr>
@@ -141,41 +142,49 @@ License: You must have a valid license purchased only from themeforest(the above
         </div>
     </div>
 </div>
+<!--begin::Modal spend-->
+<div class="modal fade" id="kt_modal_3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Thêm mới bệnh nhân</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <label>Tên bệnh nhân<span style="color: red">*</span></label>
+                        <input type="text" class="form-control material-input"
+                               placeholder="Họ và tên bệnh nhân" id="cusName">
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Hình thức thanh toán</label>
+                        <input type="text" class="form-control material-input"
+                               id="cusBilling">
+                    </div>
+                </div>
+                <div class="row col-lg-12">
+                    <label>Ghi chú</label>
+                    <textarea class="form-control" rows="3" id="cusNote"></textarea>
+                </div>
+            </div>
+            <div id="error"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="window.location = '/customer'">Đóng</button>
+                <button type="button" class="btn btn-primary" id="saveCustomer">Lưu thông tin</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--end::Modal-->
 <!--<div data-th-replace="partials/_footer/base"></div>-->
 <!--<th:block th:replace="transaction/detail.html"></th:block>-->
 <!-- end:: Page -->
 
 <!-- begin::Global Config(global config for global JS sciprts) -->
-<script>
-    var KTAppOptions = {
-        "colors": {
-            "state": {
-                "brand": "#5d78ff",
-                "dark": "#282a3c",
-                "light": "#ffffff",
-                "primary": "#5867dd",
-                "success": "#34bfa3",
-                "info": "#36a3f7",
-                "warning": "#ffb822",
-                "danger": "#fd3995"
-            },
-            "base": {
-                "label": [
-                    "#c5cbe3",
-                    "#a1a8c3",
-                    "#3d4465",
-                    "#3e4466"
-                ],
-                "shape": [
-                    "#f0f3ff",
-                    "#d9dffa",
-                    "#afb4d4",
-                    "#646c9a"
-                ]
-            }
-        }
-    };
-</script>
 
 <!-- end::Global Config -->
 
@@ -186,12 +195,6 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--end::Global Theme Bundle -->
 
 <!--begin::Page Vendors(used by this page) -->
-<script src="assets/plugins/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
-
-<!--end::Page Vendors -->
-
-<!--begin::Page Scripts(used by this page) -->
-<script src="assets/js/pages/components/calendar/basic.js" type="text/javascript"></script>
 
 <script src="assets/js/pages/crud/forms/widgets/select2.js" type="text/javascript"></script>
 
