--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -169,8 +169,8 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                                     class="text-center" rowspan="2">
                                                     <button type="button" class="btn btn-success btn-circle btn-icon" data-toggle="modal"
-                                                            data-target="#kt_select2_modal" data-backdrop="static"
-                                                            data-keyboard="false"><i class="flaticon2-plus"></i>
+                                                            data-target="#kt_select2_modal" data-backdrop="static" data-keyboard="false">
+                                                        <i class="flaticon2-plus"></i>
                                                     </button>
                                                 </th>
                                             </tr>
